--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="edit_message">Please input your message</string>
     <string name="edit_delayed_time">Please input maximum time</string>
     <string name="button_send">Send</string>
+    <string name="button_release">Release</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">My Message</string>
